# security-management-system-backend

./: .env.example  alembic.ini  main.py  pyproject.toml  rough.py
alembic/: env.py
alembic/versions/: 2a4c9f976fc9_change_data_type.py  3d922f7095ec_create_todos_table.py  43e7610802c1_add_image_column.py  8f25bc37b958_again_adjust_primaryjoin.py  aaa16520ef5a_add_name_section_in_assignment.py  b061afd62e48_add_column_in_guard.py  d6de80e7e5a7_add_auth_table.py  f8ffc7643d91_add_primaryjoin.py  fdb32a6173cf_inventry_recode_primaryjoin.py
config/: database.py
models/: __init__.py  auth.py  client.py  dutyassignment.py  guard.py  inventoryrecord.py  salaryrecord.py
rout/: client_routs.py  dashboard_routs.py  duty_assignments_routs.py  extra.py  guard_routs.py  inventory_routs.py  reports_routs.py  salary_routs.py  search_routs.py  user_routs.py
utils/: pydantic_model.py  util.py
